fix: Enhance ARCTANEX method to normalize negative angles and support 3-argument form
Fixes #11, "AI" (it's just following through waypoints) is working for all cars.